--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "server:monitor": "./server-manage.sh monitor"
   },
   "dependencies": {
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -44,6 +45,8 @@
     "@types/uuid": "^10.0.0",
     "axios": "^1.9.0",
     "body-parser": "^2.2.0",
+    "cache-manager": "^6.4.3",
+    "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cos-nodejs-sdk-v5": "^2.14.7",
@@ -53,6 +56,7 @@
     "mysql2": "^3.14.0",
     "openai": "^4.103.0",
     "qcloud-cos-sts": "^3.1.3",
+    "redis": "^5.1.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "sequelize": "^6.37.6",
